# apeiron

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  apeiron.sublime-project  camera.cpp  camera.h  color.h  error.h  gui.cpp  gui.h  input.h  main.cpp  model.cpp  model.h  model_loader.cpp  model_loader.h  options.h  primitives.cpp  primitives.h  shader.cpp  shader.h  world.cpp  world.h
apeiron/engine/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  collision.cpp  collision.h  color_converter.h  controller.cpp  controller.h  entity.h  enums.h  error.h  event.h  font.cpp  font.h  image_loader.cpp  input.h  model_loader.cpp  model_loader.h  primitive.cpp  primitive.h  sdl_input.h  sdl_window_wrapper.cpp  sdl_window_wrapper.h  text.h  transform.cpp  transform.h  vertex.h  window_wrapper.cpp  window_wrapper.h
apeiron/opengl/: command_buffer.cpp  command_buffer.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  enums.cpp  enums.h  frame_buffer.cpp  frame_buffer.h  grid.cpp  grid.h  gui.cpp  gui.h  mesh.cpp  mesh.h  mesh_font.cpp  mesh_font.h  meshset.cpp  meshset.h  model.cpp  model.h  points.cpp  points.h  quad.cpp  quad.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_storage_buffer.cpp  shader_storage_buffer.h  shape.cpp  shape.h  text.cpp  text.h  texture.cpp  texture.h  tileset.cpp  tileset.h  (+8 more)
apeiron/opengl/shader/: default.fs  default.vs
apeiron/prefab/: axes.cpp  axes.h  axis.h  grid.cpp  grid.h  light.h  origin.cpp  origin.h  teapot.h  text.cpp  text.h  xy_axes.cpp  xy_axes.h
apeiron/utility/: dpi_scaling.h  timer.cpp  timer.h
assets/font/: ark-pixel-ofl.txt  ark-pixel.json
assets/fonts/: scientifica.json
assets/fonts/inter/: inter-regular.json
assets/fonts/mesh/: roboto_mono.afphoto  roboto_mono.blend  roboto_mono.toml
assets/fonts/scientifica/: scientifica.json
cmake/: apeiron-gui-sdl2-opengl3.cmake  apeiron-gui-sdl3-opengl3.cmake  apeiron.cmake
engine/: camera.cpp  camera.h  collision.h  color.h  color_converter.h  entity.h  error.h  event.h  image_loader.cpp  image_loader.h  input.h  model_flags.h  model_loader.cpp  model_loader.h  primitive.cpp  primitive.h  ray.h  sdl_input.h  text.cpp  text.h  vertex.h
example/: CMakeLists.txt  axes.cpp  axes.h  axis.h  cube.h  cylinder.h  event_visitor.cpp  event_visitor.h  ground.h  ground_highlight.h  light.h  main.cpp  menu.cpp  menu.h  options.cpp  options.h  poneglyph.h  settings.cpp  settings.h  teapot.h  vehicle.cpp  vehicle.h  world.cpp  world.h
opengl/: charset.cpp  charset.h  cube.cpp  cube.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  frame_buffer.cpp  frame_buffer.h  grid.cpp  grid.h  gui.cpp  gui.h  line_array.cpp  line_array.h  mesh.cpp  mesh.h  mesh_font.cpp  mesh_font.h  meshset.cpp  meshset.h  model.cpp  model.h  points.cpp  points.h  polygon.cpp  polygon.h  quad.cpp  quad.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h  (+6 more)
opengl/shader/: color.fs  default.fs  fragment.fs  screen.vs  vertex.vs  world.vs
prefab/: axes.cpp  axes.h  axis.h  grid.h  ground.cpp  ground.h  light.h  teapot.h
shader/: mvp_position.vs  uniform_color.fs
utility/: linear_range.h  timer.cpp  timer.h
